<resources>
    <string name="app_name">EnergySaver</string>
    <string name="correu">Adreça electrònica</string>
    <string name="correu_el_ctronic">correu elèctronic</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="btnvalidar">Validar</string>
    <string name="registre">Registre</string>
    <string name="Editcontrasenya">contrasenya</string>
    <string name="titol">Titol</string>
    <string name="TxtCognoms">Cognoms</string>
    <string name="TxtNickname">Nickname</string>
    <string name="TxtAdreca">Adreça</string>
    <string name="txtPoblacio">Poblacio</string>
    <string name="txtContrasenya">Contrasenya</string>
    <string name="editTextNickname">nickname</string>
    <string name="txtRegistre">Registre</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnNom">Nom</string>
    <string name="editTextNom">nom</string>
    <string name="edtiTextCognoms">cognoms</string>
    <string name="editTextPoblacio">població</string>
    <string name="editTextTelefon">telèfon</string>
    <string name="editTextContrasenya">contrasenya</string>
    <string name="editTextCorreu">correu</string>
    <string name="editTextAdreca">adreça</string>
    <string name="telefon">Telefon</string>
    <string name="imViewcorreu">Correu</string>
    <string name="imViewTitol">Titol</string>
    <string name="btnRegistre">Registre</string>
    <string name="txtIdentificaci">Identificació</string>
    <string name="btnAccedir">Accedir</string>
    <string name="btnSortir">Sortir</string>
    <string name="btnGoogle2">G</string>
    <string name="boto_google">boto google</string>
    <string name="txtViewTiquetsSuport">TIQUETS DE SUPORT</string>
    <string name="txtSeleccionarEnergia">Selecciona Energia</string>
    <string name="txtPeriode">Període</string>
    <string name="textAigua">Aigua</string>
    <string name="textLlum">Llum</string>
    <string name="textGas">Gas</string>
    <string name="textGasoil">Gasoil</string>
    <string name="graficPlaceholder">Gráfic</string>
    <string name="SeleccionaEnergies">Selecciona Energies</string>
    <string name="BaixaUsuari">Baixa Usuari</string>
    <string name="Sortir">Sortir</string>
    <string name="Baixa">Baixa</string>
    <string name="ModificarDades">Modificar</string>
    <string name="energy_saver">Energy Saver</string>
    <string name="Suport">Suport</string>
    <string name="account_settings">Account Settings</string>
    <string name="modificar_dades">Modificar Dades</string>
    <string name="raig">Raig</string>
    <string name="newTiquet">Nou</string>
    <string name="bttnBorrarTiquet">Borrar</string>
    <string name="txtViewObrirTiquet">OBRIR TIQUET</string>
    <string name="txtViewTemaTiquet">Tema</string>
    <string name="editTxtTemaTiquet">Introdueix el Tema...</string>
    <string name="txtViewDescripcioTiquet">Descripció</string>
    <string name="txtViewCapturaTiquet">Adjuntar Captura</string>
    <string name="editTxtDescripcioTiquet">Introdueix la Descripció...</string>
    <string name="descrpitionImageBttnCaptura">Imatge per adujntar captura</string>
    <string name="bttnConfirmarTiquet">Confirmar</string>
    <string name="MenuEnergies">Energies</string>
    <string name="MenuInformes">Informes</string>
    <string name="MenuConfiguraciUsuari">Configuració usuari</string>
    <string name="logoESmedalles">Logo Energy Saver</string>
    <string name="medalla1">Medalla Estalviador</string>
    <string name="txtViewMedEstalviador">Estalviador</string>
    <string name="imgBttnMedGranEstalviador">Gran Estalviador</string>
    <string name="txtViewGranEstalviador">GranEstalviador</string>
    <string name="imgBttnMigAny">Medalla de mig any estalviant</string>
    <string name="imgBttnUnAny">Medalla de un any estalviant</string>
    <string name="txtViewMigAny">Mig Any Estalviant</string>
    <string name="txtViewAny">Un Any Estalviant</string>
    <string name="medallaEstalviadorGran">Medalla guanyada (Estalviador)</string>
    <string name="multiLineTxtViewMedalla1">Has guanyat la medalla Estalviador!! Enhorabona!!</string>
    <string name="multiLineTxtViewMedalla2">Has guanyat la medalla Gran Estalviador!! Enhorabona!!</string>
    <string name="multiLineTxtViewMedalla3">Has guanyat la medalla Mig Any Estalviant!! Enhorabona!!</string>
    <string name="multiLineTxtViewMedalla4">Has guanyat la medalla Un Any Estalviant!! Enhorabona!!</string>
    <string name="defaultcd">default</string>
    <string name="Menu_medalles">Medalles</string>
    <string name="campsBuitsToastObrirTiquet">Els camps de text han d estar emplenats</string>
    <string name="txtViewTiquetTitolObert">TIQUET</string>
    <string name="bttnResposta">RESPOSTA</string>
    <string name="bttnEnviarResposta">ENVIAR</string>
    <string name="txtViewResposta">Resposta</string>
    <string name="consum_energies">Consum Energies</string>
    <string name="txtViewSenseResposta">Esperant la resposta...</string>
    <string name="borrarTiquet">Sel·lecciona algun tiquet!</string>
    <string name="tempsBorrarTiquet">Només pots esborrar tiquets 30 minuts després!</string>
    <string name="introdueix_el_consum">Introdueix el consum</string>
    <string name="introdueix_l_import">Introdueix import</string>
    <string name="data_factura">Data Factura</string>
    <string name="m3" translatable="false">m3</string>
    <string name="Euro" translatable="false">€</string>
    <string name="llitres">llitres</string>
    <string name="kw" translatable="false">kw</string>
    <string name="data">Data</string>
    <string name="FragmentMenu">Menú Principal</string>
    <string name="FragmentInformes">Informes</string>
    <string name="FragmentSeleccionarEnergia">Seleccionar Energia</string>
    <string name="FragmentModificarUsuari">Modificar Usuari</string>
    <string name="FragmentBaixaUsuari">Baixa Usuari</string>
    <string name="FragmentRegistre">Registre</string>
    <string name="ActivityLogin">Login</string>
    <string name="FragmentTiquet">Tiquets</string>
    <string name="FragmentNouTiquet">Nou Tiquet</string>
    <string name="FragmentMedalles">Medalles</string>
    <string name="FragmentMedallaEstalviador">Medalla Estalviador</string>
    <string name="FragmentMedallaGranEstalviador">Medalla Gran Estalviador</string>
    <string name="FragmentMedallaMigAny">Medalla Mig Any</string>
    <string name="FragmentMedallaUnAny">Medalla Un Any</string>
    <string name="FragmentVeureTiquet">Tiquet</string>
    <string name="FragmentRespostaTiquet">Respondre</string>
    <string name="FragmentMenuEnergies">Menú Energies</string>
    <string name="FragmentConsumAigua">Aigua</string>
    <string name="FragmentConsumGas">Gas</string>
    <string name="FragmentConsumGasoil">Gasoil</string>
    <string name="FragmentConsumLlum">Llum</string>
    <string name="TancaSessio">Tanca Sessió</string>
    <string name="bttnCamera">Capturar</string>
    <string name="perdreMedalla">Les medalles d estalvi es poden perdre! Estalvi és constància!</string>
    <string name="imatgeCarrgada">Imatge carregada, confirma per enviar el tiquet</string>
    <string name="textPeriode">PERIODE</string>
    <string name="textTemps">DIES</string>
    <string name="textTotal">TOTAL</string>
    <string name="txtViewRespost">Respost / Esorrar</string>
    <string name="notificacions_canal">Noti</string>
    <string name="notificacions_titol">Notificació Energy Saver</string>
    <string name="channel_name">Energy Saver</string>
    <string name="channel_description">Estalvi Energetic</string>
    <string name="Energies">Energies</string>
    <string name="energies_activades">Energies activades al teu perfil</string>
    <string name="estalviDiners">ESTALVI DINERS</string>
    <string name="estalviEnergia">ESTALVI ENERGIA</string>
    <string name="energy_notification_channel_id" translatable="false">Energy Saver</string>
    <string name="notification_title" translatable="false">Energy Saver</string>
    <string name="medalles">Medalles</string>
    <string name="medalles_notification_channel_description">Enhorabona! Has guanyat una medalla</string>
    <string name="Medalles">Medalles</string>


</resources>