<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

   >

<group>
    <item
        android:id="@+id/seleccionarEnergiaFragment"
        android:title="@string/MenuEnergies"
        android:icon="@drawable/ic_energies"
        />
    <item
        android:id="@+id/medallesFragment"
        android:title="@string/Menu_medalles"
        android:icon="@drawable/ic_medalles"/>

    <item
        android:id="@+id/informesFragment"
        android:title="@string/MenuInformes"
        android:icon="@drawable/ic_informes"/>
    <item
        android:id="@+id/obrirFragment"
        android:title="@string/Suport"
        android:icon="@drawable/ic_suport"/>

</group>

    <item
        android:title="@string/MenuConfiguraciUsuari"
        >

        <menu>
            <item
                android:id="@+id/modificarUsuari"
                android:title="@string/modificar_dades"
                android:icon="@drawable/ic_modificar"/>

            <item
                android:id="@+id/Baixa"
                android:title="@string/BaixaUsuari"
                android:icon="@drawable/ic_baixa"/>
            <item
                android:id="@+id/Sortir"
                android:title="@string/Sortir"
                android:icon="@drawable/ic_sortir"/>

        </menu>
    </item>
</menu>